[package]
name = "icp_canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.7"
serde = { version = "1.0", features = ["derive"] }
ic-ledger-types = "0.9"
ic-cdk-macros = "0.9"
ic-stable-structures = "0.6.9"
sha2 = "0.10.9"
hex = "0.4.3"
serde_json = "1.0.141"
lazy_static = "1.5.0"

[dev-dependencies]
pocket-ic      = "9"
candid_parser = "0.1"
